--- a/public/cadVenda.html
+++ b/public/cadVenda.html
@@ -542,7 +542,7 @@ alert(el.parentElement.id);
 alert(el.children[0].id);
     */
     console.log('Getting...');
-    let url = 'http://localhost/produto/' + id
+    let url = '/produto/' + id
     console.log(url)
     fetch(url, {
       method: 'get',
