--- a/public/graphorizo.html
+++ b/public/graphorizo.html
@@ -167,7 +167,7 @@
         function gerarGrafico() {
             div = document.getElementById('row')
             falafi = document.getElementById('page-content-wrapper')
-            fetch('http://localhost/graph', {
+            fetch('/graph', {
                 method: 'get',
                 headers: {
                     'Content-Type': 'application/json',
