--- a/public/cadVenda.html
+++ b/public/cadVenda.html
@@ -658,7 +658,7 @@ alert(el.children[0].id);
     console.log(j);
 
     console.log(objeto.itens)
-    fetch('http://localhost/postVendaItem', {
+    fetch('/postVendaItem', {
       method: 'post',
       headers: {
         'Content-Type': 'application/json'
