--- a/public/cadVenda.html
+++ b/public/cadVenda.html
@@ -191,8 +191,9 @@
       position: absolute;
       bottom: 150px;
       right: 100px;
-      width: 10%;
+      width: 15%;
       font-size: 28px;
+      text-align: center;
     }
 
     .insert {
