--- a/public/graphorizo.html
+++ b/public/graphorizo.html
@@ -217,7 +217,7 @@
                             <div>
 
                             </div>
-                            <div style='margin-top:-105%; text-align:center;
+                            <div text-align:center;
 }'>
                                 ${valorOutros}
                                 </div>
